# azure_functions_py_template

./: __azurite_db_queue__.json  __azurite_db_queue_extent__.json
my-stuff/: function_app.py  pyproject.toml  requirements.txt
my-stuff/misc/: deploy_notes.sh  example.py
