[tool.poetry]
name = "my-stuff"
version = "0.1.0"
description = ""
authors = ["sorhawell <sorhawell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
sqlalchemy = "^2.0.27"
azure-functions = "^1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
